Navbar fixed. Used z-index:1 to put in the foreground

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -6,12 +6,11 @@ body {
     height: 80px;
 }
 
-.collapse {
+.container-fluid {
     z-index: 1;
     position: relative;
     background-color: rgb(52, 58, 64);
     padding: 10px;
-    border: 1px solid black;
 }
 
 .container {
